clase_compiladores/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    STRING

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM IDENTIFIER SEMICOL VARS_OPT FUNCS_OPT MAIN Body END
Rule 2     VARS_OPT -> VARS
Rule 3     VARS_OPT -> empty
Rule 4     FUNCS_OPT -> FUNCS FUNCS_OPT
Rule 5     FUNCS_OPT -> empty
Rule 6     VARS -> VAR VARS_INIT
Rule 7     VARS_INIT -> IDENTIFIER MORE_IDS COLON TYPE SEMICOL
Rule 8     VARS_INIT -> IDENTIFIER MORE_IDS COLON TYPE SEMICOL VARS_INIT
Rule 9     MORE_IDS -> COMMA IDENTIFIER MORE_IDS
Rule 10    MORE_IDS -> empty
Rule 11    FUNCS -> VOID IDENTIFIER LPAREN ARGS RPAREN LSQBRACKET VARS_OPT Body RSQBRACKET SEMICOL
Rule 12    MORE_ARGS -> COMMA IDENTIFIER COLON TYPE MORE_ARGS
Rule 13    MORE_ARGS -> empty
Rule 14    ARGS -> IDENTIFIER COLON TYPE MORE_ARGS
Rule 15    ARGS -> empty
Rule 16    Body -> LBRACKET STATEMENT_OPT RBRACKET
Rule 17    STATEMENT_OPT -> STATEMENT STATEMENT_OPT
Rule 18    STATEMENT_OPT -> empty
Rule 19    STATEMENT -> ASSIGN
Rule 20    STATEMENT -> CONDITION
Rule 21    STATEMENT -> CYCLE
Rule 22    STATEMENT -> F_CALL
Rule 23    STATEMENT -> PRINTP
Rule 24    ASSIGN -> IDENTIFIER OP_ASIGNA EXPRESION SEMICOL
Rule 25    CONDITION -> IF LPAREN EXPRESION RPAREN Body ELSE_ARG SEMICOL
Rule 26    ELSE_ARG -> ELSE Body
Rule 27    ELSE_ARG -> empty
Rule 28    CYCLE -> DO Body WHILE LPAREN EXPRESION RPAREN SEMICOL
Rule 29    PRINTP -> PRINT LPAREN CONST_STRING MORE_PRINT_ARGS RPAREN SEMICOL
Rule 30    PRINTP -> PRINT LPAREN EXPRESION MORE_PRINT_ARGS RPAREN SEMICOL
Rule 31    MORE_PRINT_ARGS -> COMMA CONST_STRING MORE_PRINT_ARGS
Rule 32    MORE_PRINT_ARGS -> COMMA EXPRESION MORE_PRINT_ARGS
Rule 33    MORE_PRINT_ARGS -> empty
Rule 34    TYPE -> INT
Rule 35    TYPE -> FLOAT
Rule 36    EXPRESION -> EXP EXPRESION_OPT
Rule 37    EXPRESION_OPT -> LESS EXP
Rule 38    EXPRESION_OPT -> GREATER EXP
Rule 39    EXPRESION_OPT -> NOT_EQUAL EXP
Rule 40    EXPRESION_OPT -> EQUALS EXP
Rule 41    EXPRESION_OPT -> LESS_EQUAL EXP
Rule 42    EXPRESION_OPT -> GREATER_EQUAL EXP
Rule 43    EXPRESION_OPT -> empty
Rule 44    EXP -> TERMINO EXP_OPT
Rule 45    EXP_OPT -> OP_SUM TERMINO EXP_OPT
Rule 46    EXP_OPT -> OP_SUB TERMINO EXP_OPT
Rule 47    EXP_OPT -> empty
Rule 48    TERMINO -> FACTOR TERMINO_OPT
Rule 49    TERMINO_OPT -> OP_MULT FACTOR TERMINO_OPT
Rule 50    TERMINO_OPT -> OP_DIV FACTOR TERMINO_OPT
Rule 51    TERMINO_OPT -> empty
Rule 52    FACTOR -> LPAREN EXPRESION RPAREN
Rule 53    FACTOR -> SIGN IDENTIFIER
Rule 54    FACTOR -> SIGN CTE
Rule 55    SIGN -> OP_SUM
Rule 56    SIGN -> OP_SUB
Rule 57    SIGN -> empty
Rule 58    F_CALL -> IDENTIFIER LPAREN OPT_EXPRESION RPAREN SEMICOL
Rule 59    OPT_EXPRESION -> EXPRESION MORE_EXPRESION
Rule 60    OPT_EXPRESION -> empty
Rule 61    MORE_EXPRESION -> COMMA EXPRESION MORE_EXPRESION
Rule 62    MORE_EXPRESION -> empty
Rule 63    CTE -> CONST_INT
Rule 64    CTE -> CONST_FLOAT
Rule 65    empty -> <empty>

Terminals, with rules where they appear

COLON                : 7 8 12 14
COMMA                : 9 12 31 32 61
COMMENT              : 
CONST_FLOAT          : 64
CONST_INT            : 63
CONST_STRING         : 29 31
DO                   : 28
ELSE                 : 26
END                  : 1
EQUALS               : 40
FLOAT                : 35
GREATER              : 38
GREATER_EQUAL        : 42
IDENTIFIER           : 1 7 8 9 11 12 14 24 53 58
IF                   : 25
INT                  : 34
LBRACKET             : 16
LESS                 : 37
LESS_EQUAL           : 41
LPAREN               : 11 25 28 29 30 52 58
LSQBRACKET           : 11
MAIN                 : 1
NOT_EQUAL            : 39
OP_ASIGNA            : 24
OP_DIV               : 50
OP_MULT              : 49
OP_SUB               : 46 56
OP_SUM               : 45 55
PRINT                : 29 30
PROGRAM              : 1
RBRACKET             : 16
RPAREN               : 11 25 28 29 30 52 58
RSQBRACKET           : 11
SEMICOL              : 1 7 8 11 24 25 28 29 30 58
STRING               : 
VAR                  : 6
VOID                 : 11
WHILE                : 28
error                : 

Nonterminals, with rules where they appear

ARGS                 : 11
ASSIGN               : 19
Body                 : 1 11 25 26 28
CONDITION            : 20
CTE                  : 54
CYCLE                : 21
ELSE_ARG             : 25
EXP                  : 36 37 38 39 40 41 42
EXPRESION            : 24 25 28 30 32 52 59 61
EXPRESION_OPT        : 36
EXP_OPT              : 44 45 46
FACTOR               : 48 49 50
FUNCS                : 4
FUNCS_OPT            : 1 4
F_CALL               : 22
MORE_ARGS            : 12 14
MORE_EXPRESION       : 59 61
MORE_IDS             : 7 8 9
MORE_PRINT_ARGS      : 29 30 31 32
OPT_EXPRESION        : 58
PRINTP               : 23
SIGN                 : 53 54
STATEMENT            : 17
STATEMENT_OPT        : 16 17
TERMINO              : 44 45 46
TERMINO_OPT          : 48 49 50
TYPE                 : 7 8 12 14
VARS                 : 2
VARS_INIT            : 6 8
VARS_OPT             : 1 11
empty                : 3 5 10 13 15 18 27 33 43 47 51 57 60 62
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM IDENTIFIER SEMICOL VARS_OPT FUNCS_OPT MAIN Body END

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . IDENTIFIER SEMICOL VARS_OPT FUNCS_OPT MAIN Body END

    IDENTIFIER      shift and go to state 3


state 3

    (1) program -> PROGRAM IDENTIFIER . SEMICOL VARS_OPT FUNCS_OPT MAIN Body END

    SEMICOL         shift and go to state 4


state 4

    (1) program -> PROGRAM IDENTIFIER SEMICOL . VARS_OPT FUNCS_OPT MAIN Body END
    (2) VARS_OPT -> . VARS
    (3) VARS_OPT -> . empty
    (6) VARS -> . VAR VARS_INIT
    (65) empty -> .

    VAR             shift and go to state 8
    VOID            reduce using rule 65 (empty -> .)
    MAIN            reduce using rule 65 (empty -> .)

    VARS_OPT                       shift and go to state 5
    VARS                           shift and go to state 6
    empty                          shift and go to state 7

state 5

    (1) program -> PROGRAM IDENTIFIER SEMICOL VARS_OPT . FUNCS_OPT MAIN Body END
    (4) FUNCS_OPT -> . FUNCS FUNCS_OPT
    (5) FUNCS_OPT -> . empty
    (11) FUNCS -> . VOID IDENTIFIER LPAREN ARGS RPAREN LSQBRACKET VARS_OPT Body RSQBRACKET SEMICOL
    (65) empty -> .

    VOID            shift and go to state 12
    MAIN            reduce using rule 65 (empty -> .)

    FUNCS_OPT                      shift and go to state 9
    FUNCS                          shift and go to state 10
    empty                          shift and go to state 11

state 6

    (2) VARS_OPT -> VARS .

    VOID            reduce using rule 2 (VARS_OPT -> VARS .)
    MAIN            reduce using rule 2 (VARS_OPT -> VARS .)
    LBRACKET        reduce using rule 2 (VARS_OPT -> VARS .)


state 7

    (3) VARS_OPT -> empty .

    VOID            reduce using rule 3 (VARS_OPT -> empty .)
    MAIN            reduce using rule 3 (VARS_OPT -> empty .)
    LBRACKET        reduce using rule 3 (VARS_OPT -> empty .)


state 8

    (6) VARS -> VAR . VARS_INIT
    (7) VARS_INIT -> . IDENTIFIER MORE_IDS COLON TYPE SEMICOL
    (8) VARS_INIT -> . IDENTIFIER MORE_IDS COLON TYPE SEMICOL VARS_INIT

    IDENTIFIER      shift and go to state 14

    VARS_INIT                      shift and go to state 13

state 9

    (1) program -> PROGRAM IDENTIFIER SEMICOL VARS_OPT FUNCS_OPT . MAIN Body END

    MAIN            shift and go to state 15


state 10

    (4) FUNCS_OPT -> FUNCS . FUNCS_OPT
    (4) FUNCS_OPT -> . FUNCS FUNCS_OPT
    (5) FUNCS_OPT -> . empty
    (11) FUNCS -> . VOID IDENTIFIER LPAREN ARGS RPAREN LSQBRACKET VARS_OPT Body RSQBRACKET SEMICOL
    (65) empty -> .

    VOID            shift and go to state 12
    MAIN            reduce using rule 65 (empty -> .)

    FUNCS                          shift and go to state 10
    FUNCS_OPT                      shift and go to state 16
    empty                          shift and go to state 11

state 11

    (5) FUNCS_OPT -> empty .

    MAIN            reduce using rule 5 (FUNCS_OPT -> empty .)


state 12

    (11) FUNCS -> VOID . IDENTIFIER LPAREN ARGS RPAREN LSQBRACKET VARS_OPT Body RSQBRACKET SEMICOL

    IDENTIFIER      shift and go to state 17


state 13

    (6) VARS -> VAR VARS_INIT .

    VOID            reduce using rule 6 (VARS -> VAR VARS_INIT .)
    MAIN            reduce using rule 6 (VARS -> VAR VARS_INIT .)
    LBRACKET        reduce using rule 6 (VARS -> VAR VARS_INIT .)


state 14

    (7) VARS_INIT -> IDENTIFIER . MORE_IDS COLON TYPE SEMICOL
    (8) VARS_INIT -> IDENTIFIER . MORE_IDS COLON TYPE SEMICOL VARS_INIT
    (9) MORE_IDS -> . COMMA IDENTIFIER MORE_IDS
    (10) MORE_IDS -> . empty
    (65) empty -> .

    COMMA           shift and go to state 19
    COLON           reduce using rule 65 (empty -> .)

    MORE_IDS                       shift and go to state 18
    empty                          shift and go to state 20

state 15

    (1) program -> PROGRAM IDENTIFIER SEMICOL VARS_OPT FUNCS_OPT MAIN . Body END
    (16) Body -> . LBRACKET STATEMENT_OPT RBRACKET

    LBRACKET        shift and go to state 22

    Body                           shift and go to state 21

state 16

    (4) FUNCS_OPT -> FUNCS FUNCS_OPT .

    MAIN            reduce using rule 4 (FUNCS_OPT -> FUNCS FUNCS_OPT .)


state 17

    (11) FUNCS -> VOID IDENTIFIER . LPAREN ARGS RPAREN LSQBRACKET VARS_OPT Body RSQBRACKET SEMICOL

    LPAREN          shift and go to state 23


state 18

    (7) VARS_INIT -> IDENTIFIER MORE_IDS . COLON TYPE SEMICOL
    (8) VARS_INIT -> IDENTIFIER MORE_IDS . COLON TYPE SEMICOL VARS_INIT

    COLON           shift and go to state 24


state 19

    (9) MORE_IDS -> COMMA . IDENTIFIER MORE_IDS

    IDENTIFIER      shift and go to state 25


state 20

    (10) MORE_IDS -> empty .

    COLON           reduce using rule 10 (MORE_IDS -> empty .)


state 21

    (1) program -> PROGRAM IDENTIFIER SEMICOL VARS_OPT FUNCS_OPT MAIN Body . END

    END             shift and go to state 26


state 22

    (16) Body -> LBRACKET . STATEMENT_OPT RBRACKET
    (17) STATEMENT_OPT -> . STATEMENT STATEMENT_OPT
    (18) STATEMENT_OPT -> . empty
    (19) STATEMENT -> . ASSIGN
    (20) STATEMENT -> . CONDITION
    (21) STATEMENT -> . CYCLE
    (22) STATEMENT -> . F_CALL
    (23) STATEMENT -> . PRINTP
    (65) empty -> .
    (24) ASSIGN -> . IDENTIFIER OP_ASIGNA EXPRESION SEMICOL
    (25) CONDITION -> . IF LPAREN EXPRESION RPAREN Body ELSE_ARG SEMICOL
    (28) CYCLE -> . DO Body WHILE LPAREN EXPRESION RPAREN SEMICOL
    (58) F_CALL -> . IDENTIFIER LPAREN OPT_EXPRESION RPAREN SEMICOL
    (29) PRINTP -> . PRINT LPAREN CONST_STRING MORE_PRINT_ARGS RPAREN SEMICOL
    (30) PRINTP -> . PRINT LPAREN EXPRESION MORE_PRINT_ARGS RPAREN SEMICOL

    RBRACKET        reduce using rule 65 (empty -> .)
    IDENTIFIER      shift and go to state 35
    IF              shift and go to state 36
    DO              shift and go to state 37
    PRINT           shift and go to state 38

    STATEMENT_OPT                  shift and go to state 27
    STATEMENT                      shift and go to state 28
    empty                          shift and go to state 29
    ASSIGN                         shift and go to state 30
    CONDITION                      shift and go to state 31
    CYCLE                          shift and go to state 32
    F_CALL                         shift and go to state 33
    PRINTP                         shift and go to state 34

state 23

    (11) FUNCS -> VOID IDENTIFIER LPAREN . ARGS RPAREN LSQBRACKET VARS_OPT Body RSQBRACKET SEMICOL
    (14) ARGS -> . IDENTIFIER COLON TYPE MORE_ARGS
    (15) ARGS -> . empty
    (65) empty -> .

    IDENTIFIER      shift and go to state 39
    RPAREN          reduce using rule 65 (empty -> .)

    ARGS                           shift and go to state 40
    empty                          shift and go to state 41

state 24

    (7) VARS_INIT -> IDENTIFIER MORE_IDS COLON . TYPE SEMICOL
    (8) VARS_INIT -> IDENTIFIER MORE_IDS COLON . TYPE SEMICOL VARS_INIT
    (34) TYPE -> . INT
    (35) TYPE -> . FLOAT

    INT             shift and go to state 43
    FLOAT           shift and go to state 44

    TYPE                           shift and go to state 42

state 25

    (9) MORE_IDS -> COMMA IDENTIFIER . MORE_IDS
    (9) MORE_IDS -> . COMMA IDENTIFIER MORE_IDS
    (10) MORE_IDS -> . empty
    (65) empty -> .

    COMMA           shift and go to state 19
    COLON           reduce using rule 65 (empty -> .)

    MORE_IDS                       shift and go to state 45
    empty                          shift and go to state 20

state 26

    (1) program -> PROGRAM IDENTIFIER SEMICOL VARS_OPT FUNCS_OPT MAIN Body END .

    $end            reduce using rule 1 (program -> PROGRAM IDENTIFIER SEMICOL VARS_OPT FUNCS_OPT MAIN Body END .)


state 27

    (16) Body -> LBRACKET STATEMENT_OPT . RBRACKET

    RBRACKET        shift and go to state 46


state 28

    (17) STATEMENT_OPT -> STATEMENT . STATEMENT_OPT
    (17) STATEMENT_OPT -> . STATEMENT STATEMENT_OPT
    (18) STATEMENT_OPT -> . empty
    (19) STATEMENT -> . ASSIGN
    (20) STATEMENT -> . CONDITION
    (21) STATEMENT -> . CYCLE
    (22) STATEMENT -> . F_CALL
    (23) STATEMENT -> . PRINTP
    (65) empty -> .
    (24) ASSIGN -> . IDENTIFIER OP_ASIGNA EXPRESION SEMICOL
    (25) CONDITION -> . IF LPAREN EXPRESION RPAREN Body ELSE_ARG SEMICOL
    (28) CYCLE -> . DO Body WHILE LPAREN EXPRESION RPAREN SEMICOL
    (58) F_CALL -> . IDENTIFIER LPAREN OPT_EXPRESION RPAREN SEMICOL
    (29) PRINTP -> . PRINT LPAREN CONST_STRING MORE_PRINT_ARGS RPAREN SEMICOL
    (30) PRINTP -> . PRINT LPAREN EXPRESION MORE_PRINT_ARGS RPAREN SEMICOL

    RBRACKET        reduce using rule 65 (empty -> .)
    IDENTIFIER      shift and go to state 35
    IF              shift and go to state 36
    DO              shift and go to state 37
    PRINT           shift and go to state 38

    STATEMENT                      shift and go to state 28
    STATEMENT_OPT                  shift and go to state 47
    empty                          shift and go to state 29
    ASSIGN                         shift and go to state 30
    CONDITION                      shift and go to state 31
    CYCLE                          shift and go to state 32
    F_CALL                         shift and go to state 33
    PRINTP                         shift and go to state 34

state 29

    (18) STATEMENT_OPT -> empty .

    RBRACKET        reduce using rule 18 (STATEMENT_OPT -> empty .)


state 30

    (19) STATEMENT -> ASSIGN .

    IDENTIFIER      reduce using rule 19 (STATEMENT -> ASSIGN .)
    IF              reduce using rule 19 (STATEMENT -> ASSIGN .)
    DO              reduce using rule 19 (STATEMENT -> ASSIGN .)
    PRINT           reduce using rule 19 (STATEMENT -> ASSIGN .)
    RBRACKET        reduce using rule 19 (STATEMENT -> ASSIGN .)


state 31

    (20) STATEMENT -> CONDITION .

    IDENTIFIER      reduce using rule 20 (STATEMENT -> CONDITION .)
    IF              reduce using rule 20 (STATEMENT -> CONDITION .)
    DO              reduce using rule 20 (STATEMENT -> CONDITION .)
    PRINT           reduce using rule 20 (STATEMENT -> CONDITION .)
    RBRACKET        reduce using rule 20 (STATEMENT -> CONDITION .)


state 32

    (21) STATEMENT -> CYCLE .
